Kubernetes/learning-roadmap/project-02-chat-app/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30001
      protocol: TCP
      name: http
