Kubernetes/learning-roadmap/project-02-chat-app/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels: 
    app: redis
spec:
  clusterIP: None # Headless service for StatefulSet
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis
